Fixed overflow problem and added scrollbar style for -webkit

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,7 +15,6 @@ body{
   opacity: 0.9;
   font-family: 'Dancing Script', cursive;
   font-size: 50px;
-  margin-top: 0px;
 }
 .flex-container::before{
   content: "";
@@ -85,9 +84,15 @@ body{
   border-left: 1px solid white;
   border-right: 1px solid white;
 }
+.msg-cnt{
+  height: 500px;
+  overflow: scroll;
+  overflow-x:hidden;
+}
 #messages {
   color: white;
   list-style-type: none;
+
 }
 #messages li{
   width: 250px;
@@ -97,7 +102,7 @@ body{
   border: 1px solid black;
 }
 .mainchat footer{
-  position: absolute;
+  position: relative;
   bottom: 0px;
   right: 0px;
   left: 0px;
@@ -110,4 +115,17 @@ body{
 }
 #message-form button{
   height: 50px;
+}
+
+::-webkit-scrollbar {
+    width: 12px;
+}
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.8);
 }
